# coordinax

./: .copier-answers.yml  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  RELEASING.md  SECURITY.md  conftest.py  noxfile.py  pyproject.toml
.github/: CODEOWNERS  CONTRIBUTING.md  copilot-instructions.md  release.yml  test-packages.json  test-packages.yml
.github/actions/detect-changed-packages/: action.yml
.github/actions/dispatch-package-cd/: action.yml
.github/actions/find-package-tag/: action.yml
.github/skills/gitmoji-commit/: SKILL.md
.github/workflows/: cd-coordinax-api.yml  cd-coordinax-astro.yml  cd-coordinax-hypothesis.yml  cd-coordinax-interop-astropy.yml  cd-coordinax.yml  cd-publish-coordinax-api.yml  cd-publish-coordinax-astro.yml  cd-publish-coordinax-hypothesis.yml  cd-publish-coordinax-interop-astropy.yml  cd-publish-coordinax.yml  cd-publish.yml  cd.yml  ci.yml  create-package-tags.yml  labeler.yml  sync-labels.yml
docs/: conf.py  contributing.md  conventions.md  dev.md  glossary.md  index.md  maintainers.md  spec.md
docs/ _build/doctrees/: contributing.doctree  conventions.doctree  dev.doctree  environment.pickle  glossary.doctree  index.doctree  maintainers.doctree  spec.doctree
docs/api/: angles.md  charts.md  distances.md  embeddings.md  frames.md  index.md  internal.md  manifolds.md  metrics.md  objs.md  ops.md  representations.md  roles.md  transforms.md  vecs.md  vectors.md
docs/guides/: anchored_vector_bundle.md  charts.md  coordinates_and_frames.md  embedded_manifolds.md  frames.md  manifolds.md  metrics.md  operators.md  perf.md  quantities.md  representations.md  tangents.md  transforms.md  vector_algebra.md  vectors.md
docs/tutorials/: array_objects.md  cdict_objects.md  coordinate_objects.md  point_objects.md  quantity_objects.md  tangent_objects.md  time_dependent_frames.md  vector_objects.md
paper/: paper.bib  paper.md
scripts/: __init__.py  validate_tag.py
src/coordinax/: __init__.py  _base.py  _base_acc.py  _base_dif.py  _base_pos.py  _base_vec.py  _base_vel.py  _checks.py  _converters.py  _funcs.py  _space.py  _transform.py  _typing.py  _utils.py  angle.py  angles.py  api.py  charts.py  d.py  distance.py  distances.py  embeddings.py  frames.py  internal.py  main.py  manifolds.py  metrics.py  objs.py  operators.py  ops.py  r.py  roles.py  setup_package.py  transforms.py  vecs.py
src/coordinax/_coordinax/: _base.py  _base_acc.py  _base_pos.py  _base_vel.py  _checks.py  _converters.py  _funcs.py  _mixins.py  _space.py  _utils.py  base.py  base_acc.py  base_pos.py  base_vel.py  checks.py  compat.py  converters.py  exceptions.py  funcs.py  mixins.py  space.py  typing.py  utils.py
src/coordinax/_coordinax_space_frames/: __init__.py  base.py  frame_transforms.py  galactocentric.py  icrs.py
src/coordinax/_d1/: __init__.py  base.py  builtin.py  cartesian.py  compat.py  operate.py  radial.py  transform.py
src/coordinax/_d2/: __init__.py  base.py  builtin.py  cartesian.py  compat.py  operate.py  polar.py  transform.py
src/coordinax/_d3/: __init__.py  base.py  builtin.py  cartesian.py  compat.py  cylindrical.py  operate.py  sphere.py  transform.py
src/coordinax/_d4/: __init__.py  base.py  compat.py  operate.py  spacetime.py
src/coordinax/_dn/: __init__.py  base.py  builtin.py  cartesian.py  poincare.py  transform.py
src/coordinax/_interop/: __init__.py  coordinax_interop_astropy.py  optional_deps.py
src/coordinax/_src/: __init__.py  angles.py  api.py  base_atlas.py  base_charts.py  base_manifold.py  base_metric.py  base_topo.py  checks.py  compat.py  constants.py  converters.py  custom_types.py  embed.py  exceptions.py  funcs.py  no_manifold.py  promotion_rule.py  roles.py  space.py  typing.py  utils.py  values.py
src/coordinax/_transform/: __init__.py  accelerations.py  d1.py  d2.py  d3.py  differentials.py  dn.py  space.py
src/coordinax/angles/: __init__.py  _setup_package.py
src/coordinax/charts/: __init__.py  _setup_package.py
src/coordinax/distances/: __init__.py  _setup_package.py
src/coordinax/embeddings/: __init__.py
src/coordinax/frames/: __init__.py  _setup_package.py
src/coordinax/internal/: __init__.py  _pack_utils.py  _quantity_matrix.py  _setup_package.py  _wl_utils.py
src/coordinax/main/: __init__.py
src/coordinax/manifolds/: __init__.py  _setup_package.py
src/coordinax/metrics/: __init__.py
src/coordinax/objs/: __init__.py
src/coordinax/operators/: __init__.py  _base.py  _composite.py  _funcs.py  _galilean.py  _identity.py  _sequential.py
src/coordinax/ops/: __init__.py
src/coordinax/representations/: __init__.py  _setup_package.py
src/coordinax/roles/: __init__.py
src/coordinax/transforms/: __init__.py  _setup_package.py
src/coordinax/vectors/: __init__.py  _setup_package.py
src/vector/: __init__.py  _base.py  _builtin.py  _checks.py  _exceptions.py  _transform.py  _typing.py  _utils.py  setup_package.py
src/vector/_d1/: __init__.py  base.py  builtin.py  compat.py  transform.py
src/vector/_d2/: __init__.py  base.py  builtin.py  compat.py  transform.py
src/vector/_d3/: __init__.py  base.py  builtin.py  compat.py  transform.py
src/vector/_d4/: base.py  spacetime.py
tests/: conftest.py  strategies.py  test_angle.py  test_base.py  test_builtin.py  test_bundle.py  test_charts_api.py  test_coord_transform.py  test_d1.py  test_d2.py  test_d3.py  test_distance.py  test_embedded_manifold.py  test_exceptions.py  test_jax_ops.py  test_kinematicspace.py  test_metrics.py  test_package.py  test_physical_tangent_roundtrip.py  test_representation.py  test_utils.py  test_vector.py  test_vector_from_and_add.py  test_vector_subtraction.py
tests/angles/: test_plum.py
tests/charts/: test_base.py  test_cartesian_chart.py  test_cdict.py  test_checks.py  test_fixedcompcharts.py  test_guess_chart.py
tests/distances/: test_plum.py
tests/integration/angles/: test_plum.py  (+1 more)
tests/unit/: test_boost_semantics.py  test_cartesian_product_charts.py  test_hatch_vcs_config.py  test_import_identity.py  test_validate_tag.py
(+833 files in other folders)
